--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,7 +6,10 @@
     "moduleResolution": "node",
     "jsx": "react-native",
     "target": "esnext",
-    "lib": ["dom", "esnext"],
+    "lib": [
+      "dom",
+      "esnext"
+    ],
     "allowJs": true,
     "skipLibCheck": true,
     "noEmit": true,
@@ -14,16 +17,18 @@
     "resolveJsonModule": true,
     "esModuleInterop": true,
     "isolatedModules": true,
-    "types": ["nativewind/types"]
+    "types": [
+      "nativewind/types"
+    ]
   },
   "exclude": [
     "node_modules",
     "babel.config.js",
-    "metro.config.js",
-    "jest.config.js"
+    "metro.config.js"
   ],
   "include": [
     "**/*.ts",
-    "**/*.tsx"
+    "**/*.tsx",
+    "nativewind-env.d.ts"
   ]
 }
