--- a/package.json
+++ b/package.json
@@ -11,13 +11,18 @@
     "lint:fix": "eslint . --ext .js,.jsx,.ts,.tsx --fix"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "1.23.1",
+    "@rneui/themed": "^4.0.0-rc.8",
+    "@supabase/supabase-js": "^2.49.1",
+    "ethers": "^6.13.5",
     "expo": "~52.0.39",
     "expo-status-bar": "~2.0.1",
     "nativewind": "^4.1.23",
     "react": "18.3.1",
     "react-native": "0.76.7",
     "react-native-reanimated": "^3.16.2",
-    "react-native-safe-area-context": "^5.3.0",
+    "react-native-safe-area-context": "^4.12.0",
+    "react-native-url-polyfill": "^2.0.0",
     "tailwindcss": "^3.4.17"
   },
   "devDependencies": {
