--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "eslint": "^9.22.0",
     "eslint-plugin-ft-flow": "^3.0.11",
     "eslint-plugin-jest": "^28.11.0",
+    "eslint-plugin-prettier": "^5.2.3",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-native": "^5.0.0",
     "eslint-plugin-unused-imports": "^4.1.4",
