--- a/.github/workflows/pr-checks.yml
+++ b/.github/workflows/pr-checks.yml
@@ -82,12 +82,14 @@ jobs:
 
       - name: Create Release in Sentry
         run: |
-          export SENTRY_RELEASE="pr-${{ github.event.pull_request.number }}-$(date +%Y%m%d%H%M%S)"
-          sentry-cli releases new $SENTRY_RELEASE
-          sentry-cli releases set-commits --auto $SENTRY_RELEASE
-          sentry-cli releases finalize $SENTRY_RELEASE
+          export SENTRY_RELEASE="pr-${{ github.event.pull_request.number }}"
+          sentry-cli releases new $SENTRY_RELEASE --org $SENTRY_ORG_SLUG --project $SENTRY_PROJECT_SLUG
+          sentry-cli releases set-commits --auto $SENTRY_RELEASE --org $SENTRY_ORG_SLUG --project $SENTRY_PROJECT_SLUG
+          sentry-cli releases finalize $SENTRY_RELEASE --org $SENTRY_ORG_SLUG --project $SENTRY_PROJECT_SLUG
         env:
-          SENTRY_AUTH_TOKEN: ${{ secrets.SENTRY_AUTH_TOKEN }} 
+          SENTRY_AUTH_TOKEN: ${{ secrets.SENTRY_AUTH_TOKEN }}
+          SENTRY_ORG_SLUG: ${{ secrets.SENTRY_ORG_SLUG }}
+          SENTRY_PROJECT_SLUG: ${{ secrets.SENTRY_PROJECT_SLUG }}
 
       - name: Upload Source Maps (Optional, if using JS/TS with sourcemaps)
         run: |
