--- a/.github/workflows/pr-checks.yml
+++ b/.github/workflows/pr-checks.yml
@@ -82,7 +82,7 @@ jobs:
 
       - name: Create Release in Sentry
         run: |
-          export SENTRY_RELEASE="pr-${{ github.event.pull_request.number }}" --org $SENTRY_ORG_SLUG --project $SENTRY_PROJECT_SLUG
+          export SENTRY_RELEASE="pr-${{ github.event.pull_request.number }}"
           sentry-cli releases new $SENTRY_RELEASE --org $SENTRY_ORG_SLUG --project $SENTRY_PROJECT_SLUG
           sentry-cli releases set-commits --auto $SENTRY_RELEASE --org $SENTRY_ORG_SLUG --project $SENTRY_PROJECT_SLUG
           sentry-cli releases finalize $SENTRY_RELEASE --org $SENTRY_ORG_SLUG --project $SENTRY_PROJECT_SLUG
