--- a/.github/workflows/pr-checks.yml
+++ b/.github/workflows/pr-checks.yml
@@ -80,9 +80,10 @@ jobs:
       - name: Install Sentry CLI
         run: npm install -g @sentry/cli
 
-      - name: Create Release in Sentry
+      - name: Set Debug Log Level for Sentry CLI
         run: |
-          export SENTRY_RELEASE="pr-${{ github.event.pull_request.number }}" --org $SENTRY_ORG_SLUG --project $SENTRY_PROJECT_SLUG
+          export SENTRY_LOG_LEVEL=debug
+          export SENTRY_RELEASE="pr-${{ github.event.pull_request.number }}"
           sentry-cli releases new $SENTRY_RELEASE --org $SENTRY_ORG_SLUG --project $SENTRY_PROJECT_SLUG
           sentry-cli releases set-commits --auto $SENTRY_RELEASE --org $SENTRY_ORG_SLUG --project $SENTRY_PROJECT_SLUG
           sentry-cli releases finalize $SENTRY_RELEASE --org $SENTRY_ORG_SLUG --project $SENTRY_PROJECT_SLUG
@@ -90,6 +91,7 @@ jobs:
           SENTRY_AUTH_TOKEN: ${{ secrets.SENTRY_AUTH_TOKEN }}
           SENTRY_ORG_SLUG: ${{ secrets.SENTRY_ORG_SLUG }}
           SENTRY_PROJECT_SLUG: ${{ secrets.SENTRY_PROJECT_SLUG }}
+          SENTRY_LOG_LEVEL: debug
 
       - name: Upload Source Maps (Optional, if using JS/TS with sourcemaps)
         run: |
