testing sentry workflow

--- a/.github/workflows/pr-checks.yml
+++ b/.github/workflows/pr-checks.yml
@@ -84,9 +84,9 @@ jobs:
         run: |
           export SENTRY_LOG_LEVEL=debug
           export SENTRY_RELEASE="pr-${{ github.event.pull_request.number }}"
-          sentry-cli releases new $SENTRY_RELEASE --org ${{ secrets.SENTRY_ORG_SLUG }} --project ${{ secrets.SENTRY_PROJECT_SLUG }}
-          sentry-cli releases set-commits --auto $SENTRY_RELEASE --org ${{ secrets.SENTRY_ORG_SLUG }} --project ${{ secrets.SENTRY_PROJECT_SLUG }}
-          sentry-cli releases finalize $SENTRY_RELEASE --org ${{ secrets.SENTRY_ORG_SLUG }} --project ${{ secrets.SENTRY_PROJECT_SLUG }}
+          sentry-cli releases new $SENTRY_RELEASE --org ${{ vars.SENTRY_ORG_SLUG }} --project ${{ vars.SENTRY_PROJECT_SLUG }}
+          sentry-cli releases set-commits --auto $SENTRY_RELEASE --org ${{ vars.SENTRY_ORG_SLUG }} --project ${{ vars.SENTRY_PROJECT_SLUG }}
+          sentry-cli releases finalize $SENTRY_RELEASE --org ${{ vars.SENTRY_ORG_SLUG }} --project ${{ vars.SENTRY_PROJECT_SLUG }}
         env:
           SENTRY_AUTH_TOKEN: ${{ secrets.SENTRY_AUTH_TOKEN }}
           SENTRY_LOG_LEVEL: debug
