testing sentry workflow

--- a/.github/workflows/pr-checks.yml
+++ b/.github/workflows/pr-checks.yml
@@ -80,16 +80,26 @@ jobs:
       - name: Install Sentry CLI
         run: npm install -g @sentry/cli
 
+      - name: Debug Environment Variables
+        run: |
+            echo "SENTRY_ORG_SLUG=$SENTRY_ORG_SLUG"
+            echo "SENTRY_PROJECT_SLUG=$SENTRY_PROJECT_SLUG"
+        env:
+            SENTRY_ORG_SLUG: ${{ secrets.SENTRY_ORG_SLUG }}
+            SENTRY_PROJECT_SLUG: ${{ secrets.SENTRY_PROJECT_SLUG }}
+
+
       - name: Set Debug Log Level for Sentry CLI
         run: |
-          export SENTRY_LOG_LEVEL=debug
           export SENTRY_RELEASE="pr-${{ github.event.pull_request.number }}"
-          sentry-cli releases new $SENTRY_RELEASE --org ${{ vars.SENTRY_ORG_SLUG }} --project ${{ vars.SENTRY_PROJECT_SLUG }}
-          sentry-cli releases set-commits --auto $SENTRY_RELEASE --org ${{ vars.SENTRY_ORG_SLUG }} --project ${{ vars.SENTRY_PROJECT_SLUG }}
-          sentry-cli releases finalize $SENTRY_RELEASE --org ${{ vars.SENTRY_ORG_SLUG }} --project ${{ vars.SENTRY_PROJECT_SLUG }}
+          sentry-cli releases new $SENTRY_RELEASE --org ${{ secrets.SENTRY_ORG_SLUG }} --project ${{ secrets.SENTRY_PROJECT_SLUG }}
+          sentry-cli releases set-commits --auto $SENTRY_RELEASE --org ${{ secrets.SENTRY_ORG_SLUG }} --project ${{ secrets.SENTRY_PROJECT_SLUG }}
+          sentry-cli releases finalize $SENTRY_RELEASE --org ${{ secrets.SENTRY_ORG_SLUG }} --project ${{ secrets.SENTRY_PROJECT_SLUG }}
         env:
           SENTRY_AUTH_TOKEN: ${{ secrets.SENTRY_AUTH_TOKEN }}
-          SENTRY_LOG_LEVEL: debug
+          SENTRY_ORG_SLUG: ${{ secrets.SENTRY_ORG_SLUG }}
+          SENTRY_PROJECT_SLUG: ${{ secrets.SENTRY_PROJECT_SLUG }}
+          ENTRY_LOG_LEVEL: debug
 
       - name: Upload Source Maps (Optional, if using JS/TS with sourcemaps)
         run: |
