--- a/.github/workflows/pr-checks.yml
+++ b/.github/workflows/pr-checks.yml
@@ -64,6 +64,7 @@ jobs:
     name: Create Sentry Release
     runs-on: ubuntu-latest
     needs: [eslint, expo-test]
+    environment: pr-checks
 
     steps:
       - name: Checkout Code
