--- a/.github/workflows/pr-checks.yml
+++ b/.github/workflows/pr-checks.yml
@@ -81,15 +81,6 @@ jobs:
       - name: Install Sentry CLI
         run: npm install -g @sentry/cli
 
-      - name: Debug Environment Variables
-        run: |
-            echo "SENTRY_ORG_SLUG=$SENTRY_ORG_SLUG"
-            echo "SENTRY_PROJECT_SLUG=$SENTRY_PROJECT_SLUG"
-        env:
-            SENTRY_ORG_SLUG: ${{ secrets.SENTRY_ORG_SLUG }}
-            SENTRY_PROJECT_SLUG: ${{ secrets.SENTRY_PROJECT_SLUG }}
-
-
       - name: Set Debug Log Level for Sentry CLI
         run: |
           export SENTRY_RELEASE="pr-${{ github.event.pull_request.number }}"
@@ -97,17 +88,22 @@ jobs:
           sentry-cli releases set-commits --auto $SENTRY_RELEASE --org ${{ secrets.SENTRY_ORG_SLUG }} --project ${{ secrets.SENTRY_PROJECT_SLUG }}
           sentry-cli releases finalize $SENTRY_RELEASE --org ${{ secrets.SENTRY_ORG_SLUG }} --project ${{ secrets.SENTRY_PROJECT_SLUG }}
         env:
-          SENTRY_AUTH_TOKEN: ${{ secrets.SENTRY_AUTH_TOKEN }}
           SENTRY_ORG_SLUG: ${{ secrets.SENTRY_ORG_SLUG }}
           SENTRY_PROJECT_SLUG: ${{ secrets.SENTRY_PROJECT_SLUG }}
           ENTRY_LOG_LEVEL: debug
 
       - name: Upload Source Maps (Optional, if using JS/TS with sourcemaps)
         run: |
-          sentry-cli releases files $SENTRY_RELEASE upload-sourcemaps ./build --url-prefix '~/static/js' --validate
+          sentry-cli releases files $SENTRY_RELEASE upload-sourcemaps ./build --url-prefix '~/static/js' --validate --org ${{ secrets.SENTRY_ORG_SLUG }} --project ${{ secrets.SENTRY_PROJECT_SLUG }}
+        env:
+          SENTRY_ORG_SLUG: ${{ secrets.SENTRY_ORG_SLUG }}
+          SENTRY_PROJECT_SLUG: ${{ secrets.SENTRY_PROJECT_SLUG }}
         if: success()
 
       - name: Notify Sentry of New Deployment
         run: |
-          sentry-cli releases deploys $SENTRY_RELEASE new -e production
+          sentry-cli releases deploys $SENTRY_RELEASE new -e production --org ${{ secrets.SENTRY_ORG_SLUG }} --project ${{ secrets.SENTRY_PROJECT_SLUG }}
+        env:
+          SENTRY_ORG_SLUG: ${{ secrets.SENTRY_ORG_SLUG }}
+          SENTRY_PROJECT_SLUG: ${{ secrets.SENTRY_PROJECT_SLUG }}
         if: success()
