--- a/package.json
+++ b/package.json
@@ -11,7 +11,10 @@
     "lint:fix": "eslint . --ext .js,.jsx,.ts,.tsx --fix"
   },
   "dependencies": {
+    "@expo/vector-icons": "^14.0.4",
     "@react-native-async-storage/async-storage": "1.23.1",
+    "@react-navigation/bottom-tabs": "^7.3.2",
+    "@react-navigation/native": "^7.0.18",
     "@rneui/themed": "^4.0.0-rc.8",
     "@sentry/react-native": "^6.3.0",
     "@supabase/supabase-js": "^2.49.1",
@@ -23,6 +26,7 @@
     "react-native": "0.76.7",
     "react-native-reanimated": "^3.16.2",
     "react-native-safe-area-context": "^4.12.0",
+    "react-native-screens": "^4.4.0",
     "react-native-url-polyfill": "^2.0.0",
     "tailwindcss": "^3.4.17"
   },
