--- a/package.json
+++ b/package.json
@@ -15,18 +15,22 @@
     "@react-native-async-storage/async-storage": "1.23.1",
     "@react-navigation/bottom-tabs": "^7.3.2",
     "@react-navigation/native": "^7.0.18",
+    "@react-navigation/native-stack": "^7.3.9",
     "@rneui/themed": "^4.0.0-rc.8",
     "@sentry/react-native": "^6.3.0",
     "@supabase/supabase-js": "^2.49.1",
     "ethers": "^6.13.5",
-    "expo": "~52.0.39",
+    "expo": "~52.0.42",
     "expo-status-bar": "~2.0.1",
+    "lottie-react-native": "^7.1.0",
     "nativewind": "^4.1.23",
     "react": "18.3.1",
-    "react-native": "0.76.7",
+    "react-native": "0.76.9",
+    "react-native-gesture-handler": "^2.20.2",
     "react-native-reanimated": "^3.16.2",
     "react-native-safe-area-context": "^4.12.0",
     "react-native-screens": "^4.4.0",
+    "react-native-tab-view": "^4.0.9",
     "react-native-url-polyfill": "^2.0.0",
     "tailwindcss": "^3.4.17"
   },
@@ -34,6 +38,8 @@
     "@babel/core": "^7.25.2",
     "@react-native-community/eslint-config": "^3.2.0",
     "@types/react": "~18.3.12",
+    "@types/react-native-tab-view": "^1.0.6",
+    "@types/react-navigation": "^3.0.8",
     "@typescript-eslint/eslint-plugin": "^8.26.1",
     "@typescript-eslint/parser": "^8.26.1",
     "eslint": "^9.22.0",
