added new components and utils before trying to build login screen

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,7 +14,11 @@
     "resolveJsonModule": true,
     "esModuleInterop": true,
     "isolatedModules": true,
-    "types": ["nativewind/types"]
+    "types": ["nativewind/types"],
+    "baseUrl": ".",
+    "paths": {
+      "@/*": ["app/*"]
+    }
   },
   "exclude": ["node_modules", "babel.config.js", "metro.config.js"],
   "include": ["**/*.ts", "**/*.tsx", "nativewind-env.d.ts"]
