--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^14.0.4",
+    "@headlessui/react": "^1.7.18",
+    "@hookform/resolvers": "^5.0.1",
     "@react-native-async-storage/async-storage": "1.23.1",
     "@react-navigation/bottom-tabs": "^7.3.2",
     "@react-navigation/native": "^7.0.18",
@@ -19,12 +21,15 @@
     "@rneui/themed": "^4.0.0-rc.8",
     "@sentry/react-native": "^6.3.0",
     "@supabase/supabase-js": "^2.49.1",
+    "@tanstack/react-query": "^5.72.2",
+    "bcrypt-ts": "^6.0.0",
     "ethers": "^6.13.5",
     "expo": "~52.0.42",
     "expo-status-bar": "~2.0.1",
     "lottie-react-native": "^7.1.0",
     "nativewind": "^4.1.23",
     "react": "18.3.1",
+    "react-hook-form": "^7.55.0",
     "react-native": "0.76.9",
     "react-native-gesture-handler": "^2.20.2",
     "react-native-reanimated": "^3.16.2",
@@ -32,7 +37,8 @@
     "react-native-screens": "^4.4.0",
     "react-native-tab-view": "^4.0.9",
     "react-native-url-polyfill": "^2.0.0",
-    "tailwindcss": "^3.4.17"
+    "tailwindcss": "^3.4.17",
+    "zod": "^3.24.2"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
@@ -42,6 +48,7 @@
     "@types/react-navigation": "^3.0.8",
     "@typescript-eslint/eslint-plugin": "^8.26.1",
     "@typescript-eslint/parser": "^8.26.1",
+    "babel-plugin-module-resolver": "^5.0.2",
     "eslint": "^9.22.0",
     "eslint-plugin-ft-flow": "^3.0.11",
     "eslint-plugin-jest": "^28.11.0",
