--- a/package.json
+++ b/package.json
@@ -22,14 +22,14 @@
     "@react-navigation/native": "^7.0.18",
     "@react-navigation/native-stack": "^7.3.9",
     "@rneui/themed": "^4.0.0-rc.8",
-    "@sentry/react-native": "^6.3.0",
+    "@sentry/react-native": "~6.10.0",
     "@supabase/supabase-js": "^2.49.1",
     "@tanstack/react-query": "^5.72.2",
     "bcrypt-ts": "^6.0.0",
     "ethers": "^6.13.5",
-    "expo": "~52.0.42",
+    "expo": "~52.0.46",
     "expo-font": "^13.0.4",
-    "expo-splash-screen": "^0.29.22",
+    "expo-splash-screen": "^0.29.24",
     "expo-status-bar": "~2.0.1",
     "lottie-react-native": "^7.1.0",
     "nativewind": "^4.1.23",
@@ -63,6 +63,7 @@
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-native": "^5.0.0",
     "eslint-plugin-unused-imports": "^4.1.4",
+    "typedoc": "^0.28.2",
     "typescript": "^5.3.3"
   },
   "expo": {
