basic auth finished

--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,4 @@
-SENTRY_AUTH_TOKEN=
-SENTRY_DSN=
+EXPO_PUBLIC_SENTRY_AUTH_TOKEN=
+EXPO_PUBLIC_SENTRY_DSN=
+EXPO_PUBLIC_SUPABASE_URL=
+EXPO_PUBLIC_SUPABASE_ANON_KEY=
