--- a/package.json
+++ b/package.json
@@ -28,7 +28,9 @@
     "bcrypt-ts": "^6.0.0",
     "ethers": "^6.13.5",
     "expo": "~52.0.46",
+    "expo-file-system": "^18.0.12",
     "expo-font": "^13.0.4",
+    "expo-sharing": "^13.0.1",
     "expo-splash-screen": "^0.29.24",
     "expo-status-bar": "~2.0.1",
     "lottie-react-native": "^7.1.0",
@@ -37,6 +39,7 @@
     "react-hook-form": "^7.55.0",
     "react-native": "0.76.9",
     "react-native-gesture-handler": "^2.20.2",
+    "react-native-qrcode-svg": "^6.3.15",
     "react-native-reanimated": "^3.16.2",
     "react-native-safe-area-context": "^4.12.0",
     "react-native-screens": "^4.4.0",
@@ -45,6 +48,7 @@
     "react-native-svg-transformer": "^1.5.0",
     "react-native-tab-view": "^4.0.9",
     "react-native-url-polyfill": "^2.0.0",
+    "react-native-view-shot": "^4.0.3",
     "tailwindcss": "^3.4.17",
     "zod": "^3.24.2"
   },
