expo doctor bug resolved

--- a/package.json
+++ b/package.json
@@ -74,7 +74,10 @@
   "expo": {
     "doctor": {
       "reactNativeDirectoryCheck": {
-        "listUnknownPackages": false
+        "listUnknownPackages": false,
+        "exclude": [
+          "react-native-step-indicator"
+        ]
       }
     }
   },
