--- a/package.json
+++ b/package.json
@@ -15,7 +15,6 @@
     "@expo-google-fonts/geist": "^0.3.0",
     "@expo-google-fonts/inter": "^0.3.0",
     "@expo/vector-icons": "^14.1.0",
-    "@headlessui/react": "^1.7.18",
     "@hookform/resolvers": "^5.0.1",
     "@react-native-async-storage/async-storage": "^2.1.2",
     "@react-navigation/bottom-tabs": "^7.3.2",
@@ -44,6 +43,7 @@
     "process": "^0.11.10",
     "promise": "^8.3.0",
     "react": "^19.0.0",
+    "react-dom": "^19.0.0",
     "react-hook-form": "^7.55.0",
     "react-native": "^0.79.2",
     "react-native-crypto": "^2.2.0",
