--- a/.env.example
+++ b/.env.example
@@ -2,3 +2,4 @@ EXPO_PUBLIC_SENTRY_AUTH_TOKEN=
 EXPO_PUBLIC_SENTRY_DSN=
 EXPO_PUBLIC_SUPABASE_URL=
 EXPO_PUBLIC_SUPABASE_ANON_KEY=
+EXPO_PUBLIC_GOOGLE_CLIENT_ID=
