--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "main": "index.ts",
   "scripts": {
     "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "android": "expo run:android",
+    "postinstall": "rn-nodeify --install crypto --hack",
+    "ios": "expo run:ios",
     "web": "expo start --web",
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx",
     "lint:fix": "eslint . --ext .js,.jsx,.ts,.tsx --fix"
@@ -16,37 +17,70 @@
     "@expo-google-fonts/inter": "^0.3.0",
     "@expo/vector-icons": "^14.1.0",
     "@hookform/resolvers": "^5.0.1",
+    "@metamask/sdk": "^0.33.0",
+    "@metamask/sdk-react": "^0.33.0",
+    "@openzeppelin/contracts": "^5.3.0",
     "@react-native-async-storage/async-storage": "^2.1.2",
+    "@react-native-community/netinfo": "^11.4.1",
+    "@react-native-google-signin/google-signin": "^14.0.1",
     "@react-navigation/bottom-tabs": "^7.3.2",
     "@react-navigation/native": "^7.0.18",
     "@react-navigation/native-stack": "^7.3.9",
     "@sentry/react-native": "~6.10.0",
     "@supabase/supabase-js": "^2.49.1",
     "@tanstack/react-query": "^5.72.2",
+    "@thirdweb-dev/react-native": "^0.8.0",
+    "@walletconnect/modal": "^2.7.0",
+    "@walletconnect/modal-react-native": "^1.1.0",
+    "@walletconnect/react-native-compat": "^2.20.3",
+    "@walletconnect/sign-client": "^2.20.3",
+    "@walletconnect/time": "^1.0.2",
+    "aes-js": "^3.1.2",
     "bcrypt-ts": "^6.0.0",
     "buffer": "^6.0.3",
     "crypto": "^1.0.1",
-    "ethers": "^6.13.5",
+    "date-fns": "^4.1.0",
+    "ethers": "5.7.2",
     "events": "^3.3.0",
-    "expo": "^53.0.7",
+    "expo": "^53.0.9",
+    "expo-auth-session": "^6.1.5",
+    "expo-build-properties": "^0.14.6",
+    "expo-crypto": "~14.1.4",
+    "expo-dev-client": "~5.1.8",
+    "expo-device": "~7.1.4",
     "expo-file-system": "^18.0.12",
     "expo-font": "^13.0.4",
+    "expo-image": "~2.1.7",
     "expo-image-picker": "~16.1.4",
+    "expo-linking": "^7.1.5",
+    "expo-location": "~18.1.5",
+    "expo-notifications": "^0.31.2",
+    "expo-sensors": "~14.1.4",
     "expo-sharing": "~13.1.5",
     "expo-splash-screen": "^0.30.8",
     "expo-status-bar": "~2.2.3",
+    "expo-web-browser": "^14.1.6",
     "http-browserify": "^1.7.0",
     "https-browserify": "^1.0.0",
+    "js-sha256": "^0.11.0",
+    "js-sha3": "^0.9.3",
     "lottie-react-native": "^7.2.2",
     "nativewind": "^4.1.23",
+    "node-libs-expo": "^0.0.3",
+    "node-libs-react-native": "^1.2.1",
     "process": "^0.11.10",
     "promise": "^8.3.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.55.0",
     "react-native": "^0.79.2",
-    "react-native-crypto": "^2.2.0",
+    "react-native-background-timer": "^2.4.1",
+    "react-native-chart-kit": "^6.12.0",
+    "react-native-charts-wrapper": "^0.6.0",
+    "react-native-dotenv": "^3.4.11",
     "react-native-gesture-handler": "~2.24.0",
+    "react-native-get-random-values": "^1.11.0",
+    "react-native-google-fit": "^0.21.0",
     "react-native-pager-view": "^6.7.1",
     "react-native-qrcode-svg": "^6.3.15",
     "react-native-randombytes": "^3.6.1",
@@ -62,17 +96,34 @@
     "react-native-websocket": "^1.0.2",
     "stream-browserify": "^3.0.0",
     "tailwindcss": "^3.4.17",
-    "zod": "^3.24.2"
+    "zod": "^3.24.2",
+    "expo-background-fetch": "~13.1.5",
+    "expo-task-manager": "~13.1.5"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
+    "@nomicfoundation/hardhat-chai-matchers": "^2.0.0",
+    "@nomicfoundation/hardhat-ethers": "^3.0.8",
+    "@nomicfoundation/hardhat-ignition": "^0.15.0",
+    "@nomicfoundation/hardhat-ignition-ethers": "^0.15.0",
+    "@nomicfoundation/hardhat-network-helpers": "^1.0.0",
+    "@nomicfoundation/hardhat-toolbox": "^5.0.0",
+    "@nomicfoundation/hardhat-verify": "^2.0.0",
+    "@nomicfoundation/ignition-core": "^0.15.0",
     "@react-native-community/eslint-config": "^3.2.0",
+    "@sentry/cli": "^2.45.0",
+    "@typechain/ethers-v6": "^0.5.0",
+    "@typechain/hardhat": "^9.0.0",
+    "@types/chai": "^4.2.0",
+    "@types/mocha": "^10.0.10",
     "@types/react": "~19.0.10",
+    "@types/react-native-background-timer": "^2.0.2",
     "@types/react-native-tab-view": "^1.0.6",
     "@types/react-navigation": "^3.0.8",
     "@typescript-eslint/eslint-plugin": "^8.26.1",
     "@typescript-eslint/parser": "^8.26.1",
     "babel-plugin-module-resolver": "^5.0.2",
+    "chai": "^4.2.0",
     "eslint": "^9.22.0",
     "eslint-plugin-ft-flow": "^3.0.11",
     "eslint-plugin-jest": "^28.11.0",
@@ -80,7 +131,13 @@
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-native": "^5.0.0",
     "eslint-plugin-unused-imports": "^4.1.4",
+    "hardhat": "^2.24.0",
+    "hardhat-gas-reporter": "^1.0.8",
     "metro-react-native-babel-transformer": "^0.77.0",
+    "rn-nodeify": "^10.3.0",
+    "solidity-coverage": "^0.8.1",
+    "ts-node": "^10.9.2",
+    "typechain": "^8.3.0",
     "typedoc": "^0.28.2",
     "typescript": "~5.8.3"
   },
@@ -96,5 +153,11 @@
       }
     }
   },
-  "private": true
+  "private": true,
+  "react-native": {
+    "crypto": "react-native-crypto"
+  },
+  "browser": {
+    "crypto": "react-native-crypto"
+  }
 }
