--- a/package.json
+++ b/package.json
@@ -17,8 +17,6 @@
     "@expo-google-fonts/inter": "^0.3.0",
     "@expo/vector-icons": "^14.1.0",
     "@hookform/resolvers": "^5.0.1",
-    "@metamask/sdk": "^0.33.0",
-    "@metamask/sdk-react": "^0.33.0",
     "@openzeppelin/contracts": "^5.3.0",
     "@react-native-async-storage/async-storage": "^2.1.2",
     "@react-native-community/netinfo": "^11.4.1",
@@ -44,6 +42,7 @@
     "events": "^3.3.0",
     "expo": "^53.0.9",
     "expo-auth-session": "^6.1.5",
+    "expo-background-fetch": "~13.1.5",
     "expo-build-properties": "^0.14.6",
     "expo-crypto": "~14.1.4",
     "expo-dev-client": "~5.1.8",
@@ -59,6 +58,7 @@
     "expo-sharing": "~13.1.5",
     "expo-splash-screen": "^0.30.8",
     "expo-status-bar": "~2.2.3",
+    "expo-task-manager": "~13.1.5",
     "expo-web-browser": "^14.1.6",
     "http-browserify": "^1.7.0",
     "https-browserify": "^1.0.0",
@@ -96,9 +96,7 @@
     "react-native-websocket": "^1.0.2",
     "stream-browserify": "^3.0.0",
     "tailwindcss": "^3.4.17",
-    "zod": "^3.24.2",
-    "expo-background-fetch": "~13.1.5",
-    "expo-task-manager": "~13.1.5"
+    "zod": "^3.24.2"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
